syntax = "proto3";
package em.authority.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/e-money/em-ledger/x/authority/types";

service Msg {

  rpc CreateIssuer(MsgCreateIssuer) returns (MsgCreateIssuerResponse);

  rpc DestroyIssuer(MsgDestroyIssuer) returns (MsgDestroyIssuerResponse);

  rpc SetGasPrices(MsgSetGasPrices) returns (MsgSetGasPricesResponse);

  rpc ReplaceAuthority(MsgReplaceAuthority) returns (MsgReplaceAuthorityResponse);
}

message MsgCreateIssuer {
  string authority = 1 [ (gogoproto.moretags) = "yaml:\"authority\"" ];
  string issuer = 2 [ (gogoproto.moretags) = "yaml:\"issuer\"" ];
  repeated string denominations = 3
  [ (gogoproto.moretags) = "yaml:\"denoms\"" ];
}

message MsgCreateIssuerResponse {}

message MsgDestroyIssuer {
  string authority = 1 [ (gogoproto.moretags) = "yaml:\"authority\"" ];
  string issuer = 2 [ (gogoproto.moretags) = "yaml:\"issuer\"" ];
}

message MsgDestroyIssuerResponse {}

message MsgSetGasPrices {
  string authority = 1 [ (gogoproto.moretags) = "yaml:\"authority\"" ];
  repeated cosmos.base.v1beta1.DecCoin gas_prices = 2 [
    (gogoproto.moretags) = "yaml:\"gas_prices\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false
  ];
}

message MsgSetGasPricesResponse {}

message MsgReplaceAuthority {
  string authority = 1 [ (gogoproto.moretags) = "yaml:\"authority\"" ];
  string new_authority = 2 [ (gogoproto.moretags) = "yaml:\"new_authority\"" ];
  repeated string new_authorities = 3 [ (gogoproto.moretags) = "yaml:\"new_authorities\"" ];
  uint32 threshold = 4 [(gogoproto.moretags) = "yaml:\"threshold\""];
}

message MsgReplaceAuthorityResponse {
  string new_authority_address = 1 [ (gogoproto.moretags) = "yaml:\"new_authority_address\"" ];
}